auto trigger hash

--- a/_posts/2020-12-30-gersang.md
+++ b/_posts/2020-12-30-gersang.md
@@ -1,5 +1,6 @@
 ---
 title: "Gersang"
+slug: 'gersang'
 date: 2020-12-30 00:21:26
 location: 'Sukoharjo, Jawa Tengah'
 description: 'Panasmu mengeringkan hijaunya jiwa'
