--- a/_posts/2020-12-30-mata-sore.md
+++ b/_posts/2020-12-30-mata-sore.md
@@ -1,5 +1,6 @@
 ---
 title: "Mata Sore"
+slug: 'mata-sore'
 date: 2020-12-30 00:21:26
 location: 'Sukoharjo, Jawa Tengah'
 description: 'Mata menutup membawa kegelapan'
