--- a/_posts/2020-12-30-relief.md
+++ b/_posts/2020-12-30-relief.md
@@ -1,5 +1,6 @@
 ---
 title: "Relief"
+slug: 'relief'
 date: 2020-12-30 00:21:26
 location: 'Magelang, Jawa Tengah'
 description: 'Dalam relief ini cerita abadi'
