--- a/_posts/2020-12-30-rimbun.md
+++ b/_posts/2020-12-30-rimbun.md
@@ -1,5 +1,6 @@
 ---
 title: "Rimbun"
+slug: 'rimbun'
 date: 2020-12-30 00:21:26
 location: 'Tasikmalaya, Jawa Barat'
 description: 'Rimbunmu menyejukan jiwa lelah'
