--- a/_posts/2020-12-30-sepikul.md
+++ b/_posts/2020-12-30-sepikul.md
@@ -1,5 +1,6 @@
 ---
 title: "Sepikul"
+slug: 'sepikul'
 date: 2020-12-30 00:21:26
 location: 'Sukoharjo, Jawa Tengah'
 description: 'Cukup sepikul, cukup sampai disini, hari sudah pagi'
