--- a/_posts/2020-12-30-sunset.md
+++ b/_posts/2020-12-30-sunset.md
@@ -1,5 +1,6 @@
 ---
 title: "Sunset"
+slug: 'sunset'
 date: 2020-12-30 00:21:26
 location: 'Sukoharjo, Jawa Tengah'
 description: 'Disaat mentari meredup, kegelapan menyelimut'
